🚑️ various fixes for dark mode (#1714)

--- a/resources/sass/app-dark.scss
+++ b/resources/sass/app-dark.scss
@@ -1,16 +1,5 @@
 @import "variables";
 
-$dm-base: hsl(224, 15%, 7%);
-$dm-base-5: lighten($dm-base, 5%);
-$dm-base-20: lighten($dm-base, 20%);
-
-$dm-trwlRot: hsl(6, 100%, 73%);
-$dm-trwlRot-shape: hsl(6, 100%, 65%);
-$dm-trwlBlue: hsl(217, 100%, 81%);
-$dm-lightblue: hsl(209, 81%, 67%);
-
-$dm-body: hsl(224, 10%, 75%);
-
 :root.dark {
     --mdb-body-color: #{$dm-body};
     --mdb-modal-bg: #{$dm-base};
@@ -114,6 +103,11 @@ $dm-body: hsl(224, 10%, 75%);
     .text-muted {
         color: hsl(224, 10%, 67%) !important;
     }
+
+    .text-dark {
+        color: hsl(224, 10%, 67%) !important;
+    }
+
     .trwl-bulletpoint {
         background: lighten($dm-base, 30%) !important;
         border-color: $dm-trwlRot-shape;
@@ -344,5 +338,31 @@ $dm-body: hsl(224, 10%, 75%);
             ),
             url("/images/covers/profile-background.png");
         background-position: center;
+    }
+
+    .pagination {
+        --mdb-pagination-hover-color: #{$dm-body} !important;
+        --mdb-pagination-hover-bg: #{$dm-base-20} !important;
+        --mdb-pagination-hover-border-color: #{$dm-base-20} !important;
+        --mdb-pagination-focus-color: #{$dm-body} !important;
+        --mdb-pagination-focus-bg: #{$dm-base-30} !important;
+        --mdb-pagination-focus-box-shadow: 0 0 0 0.25rem
+            rgba(59, 113, 202, 0.25);
+        --mdb-pagination-active-color: #{$dm-body} !important;
+        --mdb-pagination-active-bg: #{$dm-base-30} !important;
+        --mdb-pagination-active-border-color: #{$dm-base-30} !important;
+        --mdb-pagination-disabled-color: hsl(224, 10%, 67%) !important;
+        --mdb-pagination-disabled-bg: #{$dm-base} !important;
+        --mdb-pagination-disabled-border-color: #{$dm-base} !important;
+    }
+    a.page-link {
+        color: #{$dm-body} !important;
+    }
+    .page-item {
+        &.disabled {
+            .page-link {
+                color: hsl(224, 10%, 55%) !important;
+            }
+        }
     }
 }
